dddl/parser.output
Grammar

    0 $accept: file $end

    1 $@1: /* empty */

    2 file: header .optstuff $@1 calledRoutines

    3 $@2: /* empty */

    4 $@3: /* empty */

    5 header: T_CLASS ':' T_ID $@2 T_BUILD ':' T_ID $@3

    6 vardecl: T_VAR vardecl_line ';'

    7 $@4: /* empty */

    8 vardecl: T_MUTEX mutexname $@4 .mutexclip '{' mx_spellist '}' ';'

    9 $@5: /* empty */

   10 vardecl: T_EXTERN T_ID $@5 ';'

   11 .mutexclip: /* empty */
   12           | '(' T_CLIP '=' exp ')'
   13           | '(' T_CLIP '=' exp ',' exp ')'

   14 mx_spellist: mx_spell ','
   15            | mx_spellist mx_spell ','

   16 mx_spell: T_SPELL

   17 vardecl_line: vardeclent
   18             | vardecl_line ',' vardeclent

   19 $@6: /* empty */

   20 $@7: /* empty */

   21 vardeclent: varname $@6 .array $@7 .init

   22 mutexname: T_ID
   23          | T_MUTEXVAR

   24 varname: T_ID
   25        | T_VARIABLE

   26 .array: /* empty */
   27       | '[' ']'

   28 .init: /* empty */
   29      | single_init
   30      | array_init

   31 single_init: '=' exp

   32 array_init: '=' '{' array_init_lines '}'

   33 array_init_lines: array_init_line
   34                 | array_init_lines array_init_line

   35 array_init_line: '[' exp ']' exp ','

   36 .optstuff: /* empty */
   37          | optstuff

   38 optstuff: optthang
   39         | optstuff optthang

   40 optthang: vardecl

   41 calledRoutines: calledRoutine
   42               | calledRoutines calledRoutine

   43 calledRoutine: incombat
   44              | oocombat

   45 $@8: /* empty */

   46 calledRoutine: T_PRECOMBAT '{' $@8 rotation '}'

   47 $@9: /* empty */

   48 calledRoutine: T_POSTSPELL '(' parameter ',' parameter ')' '{' $@9 rotation '}'

   49 $@10: /* empty */

   50 calledRoutine: T_TAKE_DAMAGE '(' parameter ')' '{' $@10 rotation '}'

   51 $@11: /* empty */

   52 calledRoutine: T_TAKE_HEAL '(' parameter ')' '{' $@11 rotation '}'

   53 $@12: /* empty */

   54 calledRoutine: T_SPELLSENT '(' parameter ')' '{' $@12 rotation '}'

   55 @13: /* empty */

   56 @14: /* empty */

   57 calledRoutine: T_FUNCTION T_ID @13 '(' .paramlist ')' '{' @14 rotation '}'

   58 .paramlist: /* empty */
   59           | paramlist

   60 paramlist: parameter
   61          | paramlist ',' parameter

   62 parameter: T_ID
   63          | exp

   64 $@15: /* empty */

   65 incombat: T_COMBAT .pick_opts $@15 '{' combatstuff '}'

   66 .pick_opts: /* empty */
   67           | '(' just_one_opt ')'
   68           | '(' pick_opts ')'

   69 just_one_opt: T_SPELL
   70             | variable

   71 pick_opts: pick_opt
   72          | pick_opts ',' pick_opt

   73 pick_opt: failspell
   74         | freespell

   75 failspell: T_FAIL '=' T_SPELL
   76          | T_FAIL '=' variable

   77 freespell: T_FREE '=' T_SPELL
   78          | T_FREE '=' variable

   79 $@16: /* empty */

   80 oocombat: T_OUTOFCOMBAT $@16 .pick_opts '{' combatstuff '}'

   81 $@17: /* empty */

   82 combatstuff: $@17 rotation

   83 $@18: /* empty */

   84 alternate: T_ALTERNATE .alt_number '{' $@18 rotation '}' ';'

   85 .alt_number: /* empty */
   86            | '(' T_INTEGER ')'

   87 clips: T_CLIP '{' clipents '}' ';'

   88 clipents: clip
   89         | clipents clip

   90 $@19: /* empty */

   91 clip: T_SPELL $@19 ':' exp ';'

   92 $@20: /* empty */

   93 $@21: /* empty */

   94 strict: T_STRICT '{' $@20 rotation '}' $@21 ';'

   95 rotation: rotation_entry
   96         | rotation rotation_entry

   97 .spell_predicate: /* empty */
   98                 | ':' exp

   99 print_statement: T_PRINT '(' stuff2print ')' ';'

  100 stuff2print: printThang
  101            | stuff2print ',' printThang

  102 printThang: exp
  103           | string

  104 string: T_STRING

  105 .spell_mintime: /* empty */
  106               | '/' spell

  107 rotation_entry: ';'
  108               | print_statement
  109               | strict
  110               | clips

  111 $@22: /* empty */

  112 rotation_entry: spell $@22 .spell_mintime .spell_predicate ';'
  113               | T_NIL ':' exp ';'

  114 @23: /* empty */

  115 rotation_entry: T_SWITCH '(' exp ')' '{' @23 .case_statements .default_statement '}'

  116 $@24: /* empty */

  117 rotation_entry: T_WHILE '(' exp ')' '{' $@24 rotation '}'

  118 $@25: /* empty */

  119 rotation_entry: T_IF '(' exp ')' '{' $@25 rotation '}' .elseifs .else
  120               | vardecl
  121               | alternate
  122               | varlist '=' exp ';'

  123 @26: /* empty */

  124 rotation_entry: T_CALL T_ID @26 '(' .paramlist ')' ';'

  125 varlist: variable
  126        | varlist ',' variable

  127 t_variable: T_VARIABLE

  128 t_externvariable: T_EXTERNVARIABLE

  129 variable: t_variable .arrayindex
  130         | t_externvariable .arrayindex

  131 .case_statements: /* empty */
  132                 | case_statements

  133 case_statements: case_statement
  134                | case_statements case_statement

  135 $@27: /* empty */

  136 $@28: /* empty */

  137 case_statement: $@27 caselines $@28 '{' rotation '}'

  138 caselines: one_case
  139          | caselines one_case

  140 one_case: T_CASE exp ':'

  141 .default_statement: /* empty */

  142 $@29: /* empty */

  143 .default_statement: T_DEFAULT ':' '{' $@29 rotation '}'

  144 .elseifs: /* empty */
  145         | elseifs

  146 elseifs: elseif
  147        | elseifs elseif

  148 $@30: /* empty */

  149 elseif: T_ELSEIF '(' exp ')' '{' $@30 rotation '}'

  150 .else: /* empty */

  151 $@31: /* empty */

  152 .else: T_ELSE '{' $@31 rotation '}'

  153 exp: '(' exp ')'
  154    | '-' exp
  155    | '!' exp
  156    | exp T_AND exp
  157    | exp T_OR exp
  158    | exp '+' exp
  159    | exp '-' exp
  160    | exp '*' exp
  161    | exp '/' exp
  162    | exp '>' exp
  163    | exp '<' exp
  164    | exp T_GEQ exp
  165    | exp T_LEQ exp
  166    | exp T_EQ exp
  167    | exp T_NEQ exp
  168    | T_ABSVAL '(' exp ')'
  169    | number
  170    | T_NIL
  171    | T_FALSE
  172    | T_TRUE
  173    | spell
  174    | builtin
  175    | variable

  176 .arrayindex: /* empty */
  177            | '[' exp ']'

  178 number: integer
  179       | float

  180 integer: T_INTEGER

  181 float: T_FLOAT

  182 builtin: T_BUILTIN_1 '(' ')'
  183        | T_BUILTIN_2 '(' .spell ')'
  184        | T_BUILTIN_2M '(' spell ')'
  185        | T_BUILTIN_3 '(' exp ')'
  186        | T_BUILTIN_4 '(' string ')'
  187        | T_BUILTIN_5 '(' exp ',' exp ',' exp ')'
  188        | T_BUILTIN_MX '(' T_MUTEXVAR ')'
  189        | T_BUILTIN_MX2 '(' T_MUTEXVAR ',' spell ')'

  190 .spell: /* empty */
  191       | exp

  192 spell: T_SPELL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 155
'(' (40) 12 13 48 50 52 54 57 67 68 86 99 115 117 119 124 149 153 168
    182 183 184 185 186 187 188 189
')' (41) 12 13 48 50 52 54 57 67 68 86 99 115 117 119 124 149 153 168
    182 183 184 185 186 187 188 189
'*' (42) 160
'+' (43) 158
',' (44) 13 14 15 18 35 48 61 72 101 126 187 189
'-' (45) 154 159
'/' (47) 106 161
':' (58) 5 91 98 113 140 143
';' (59) 6 8 10 84 87 91 94 99 107 112 113 122 124
'<' (60) 163
'=' (61) 12 13 31 32 75 76 77 78 122
'>' (62) 162
'[' (91) 27 35 177
']' (93) 27 35 177
'{' (123) 8 32 46 48 50 52 54 57 65 80 84 87 94 115 117 119 137 143
    149 152
'}' (125) 8 32 46 48 50 52 54 57 65 80 84 87 94 115 117 119 137 143
    149 152
error (256)
T_CLASS (258) 5
T_BUILD (259) 5
T_COMBAT (260) 65
T_OUTOFCOMBAT (261) 80
T_CLIP (262) 12 13 87
T_STRICT (263) 94
T_FLOAT (264) 181
T_INTEGER (265) 86 180
T_PRECOMBAT (266) 46
T_POSTSPELL (267) 48
T_SPELLSENT (268) 54
T_NIL (269) 113 170
T_ID (270) 5 10 22 24 57 62 124
T_SPELL (271) 16 69 75 77 91 192
T_ABSVAL (272) 168
T_STRING (273) 104
T_TAKE_DAMAGE (274) 50
T_TAKE_HEAL (275) 52
T_TRUE (276) 172
T_FALSE (277) 171
T_BUILTIN_1 (278) 182
T_BUILTIN_2 (279) 183
T_BUILTIN_2M (280) 184
T_BUILTIN_3 (281) 185
T_BUILTIN_4 (282) 186
T_BUILTIN_5 (283) 187
T_BUILTIN_MX (284) 188
T_BUILTIN_MX2 (285) 189
T_SWITCH (286) 115
T_CASE (287) 140
T_DEFAULT (288) 143
T_IF (289) 119
T_ELSEIF (290) 149
T_ELSE (291) 152
T_EXTERN (292) 10
T_FUNCTION (293) 57
T_WHILE (294) 117
T_ALTERNATE (295) 84
T_MUTEX (296) 8
T_MUTEXVAR (297) 23 188 189
T_FREE (298) 77 78
T_FAIL (299) 75 76
T_PRINT (300) 99
T_CALL (301) 124
T_VAR (302) 6
T_VARIABLE (303) 25 127
T_EXTERNVARIABLE (304) 128
T_OR (305) 157
T_AND (306) 156
T_EQ (307) 166
T_LEQ (308) 165
T_NEQ (309) 167
T_GEQ (310) 164
UNIMINUS (311)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
file (75)
    on left: 2, on right: 0
$@1 (76)
    on left: 1, on right: 2
header (77)
    on left: 5, on right: 2
$@2 (78)
    on left: 3, on right: 5
$@3 (79)
    on left: 4, on right: 5
vardecl (80)
    on left: 6 8 10, on right: 40 120
$@4 (81)
    on left: 7, on right: 8
$@5 (82)
    on left: 9, on right: 10
.mutexclip (83)
    on left: 11 12 13, on right: 8
mx_spellist (84)
    on left: 14 15, on right: 8 15
mx_spell (85)
    on left: 16, on right: 14 15
vardecl_line (86)
    on left: 17 18, on right: 6 18
vardeclent (87)
    on left: 21, on right: 17 18
$@6 (88)
    on left: 19, on right: 21
$@7 (89)
    on left: 20, on right: 21
mutexname (90)
    on left: 22 23, on right: 8
varname (91)
    on left: 24 25, on right: 21
.array (92)
    on left: 26 27, on right: 21
.init (93)
    on left: 28 29 30, on right: 21
single_init (94)
    on left: 31, on right: 29
array_init (95)
    on left: 32, on right: 30
array_init_lines (96)
    on left: 33 34, on right: 32 34
array_init_line (97)
    on left: 35, on right: 33 34
.optstuff (98)
    on left: 36 37, on right: 2
optstuff (99)
    on left: 38 39, on right: 37 39
optthang (100)
    on left: 40, on right: 38 39
calledRoutines (101)
    on left: 41 42, on right: 2 42
calledRoutine (102)
    on left: 43 44 46 48 50 52 54 57, on right: 41 42
$@8 (103)
    on left: 45, on right: 46
$@9 (104)
    on left: 47, on right: 48
$@10 (105)
    on left: 49, on right: 50
$@11 (106)
    on left: 51, on right: 52
$@12 (107)
    on left: 53, on right: 54
@13 (108)
    on left: 55, on right: 57
@14 (109)
    on left: 56, on right: 57
.paramlist (110)
    on left: 58 59, on right: 57 124
paramlist (111)
    on left: 60 61, on right: 59 61
parameter (112)
    on left: 62 63, on right: 48 50 52 54 60 61
incombat (113)
    on left: 65, on right: 43
$@15 (114)
    on left: 64, on right: 65
.pick_opts (115)
    on left: 66 67 68, on right: 65 80
just_one_opt (116)
    on left: 69 70, on right: 67
pick_opts (117)
    on left: 71 72, on right: 68 72
pick_opt (118)
    on left: 73 74, on right: 71 72
failspell (119)
    on left: 75 76, on right: 73
freespell (120)
    on left: 77 78, on right: 74
oocombat (121)
    on left: 80, on right: 44
$@16 (122)
    on left: 79, on right: 80
combatstuff (123)
    on left: 82, on right: 65 80
$@17 (124)
    on left: 81, on right: 82
alternate (125)
    on left: 84, on right: 121
$@18 (126)
    on left: 83, on right: 84
.alt_number (127)
    on left: 85 86, on right: 84
clips (128)
    on left: 87, on right: 110
clipents (129)
    on left: 88 89, on right: 87 89
clip (130)
    on left: 91, on right: 88 89
$@19 (131)
    on left: 90, on right: 91
strict (132)
    on left: 94, on right: 109
$@20 (133)
    on left: 92, on right: 94
$@21 (134)
    on left: 93, on right: 94
rotation (135)
    on left: 95 96, on right: 46 48 50 52 54 57 82 84 94 96 117 119
    137 143 149 152
.spell_predicate (136)
    on left: 97 98, on right: 112
print_statement (137)
    on left: 99, on right: 108
stuff2print (138)
    on left: 100 101, on right: 99 101
printThang (139)
    on left: 102 103, on right: 100 101
string (140)
    on left: 104, on right: 103 186
.spell_mintime (141)
    on left: 105 106, on right: 112
rotation_entry (142)
    on left: 107 108 109 110 112 113 115 117 119 120 121 122 124, on right:
    95 96
$@22 (143)
    on left: 111, on right: 112
@23 (144)
    on left: 114, on right: 115
$@24 (145)
    on left: 116, on right: 117
$@25 (146)
    on left: 118, on right: 119
@26 (147)
    on left: 123, on right: 124
varlist (148)
    on left: 125 126, on right: 122 126
t_variable (149)
    on left: 127, on right: 129
t_externvariable (150)
    on left: 128, on right: 130
variable (151)
    on left: 129 130, on right: 70 76 78 125 126 175
.case_statements (152)
    on left: 131 132, on right: 115
case_statements (153)
    on left: 133 134, on right: 132 134
case_statement (154)
    on left: 137, on right: 133 134
$@27 (155)
    on left: 135, on right: 137
$@28 (156)
    on left: 136, on right: 137
caselines (157)
    on left: 138 139, on right: 137 139
one_case (158)
    on left: 140, on right: 138 139
.default_statement (159)
    on left: 141 143, on right: 115
$@29 (160)
    on left: 142, on right: 143
.elseifs (161)
    on left: 144 145, on right: 119
elseifs (162)
    on left: 146 147, on right: 145 147
elseif (163)
    on left: 149, on right: 146 147
$@30 (164)
    on left: 148, on right: 149
.else (165)
    on left: 150 152, on right: 119
$@31 (166)
    on left: 151, on right: 152
exp (167)
    on left: 153 154 155 156 157 158 159 160 161 162 163 164 165 166
    167 168 169 170 171 172 173 174 175, on right: 12 13 31 35 63 91
    98 102 113 115 117 119 122 140 149 153 154 155 156 157 158 159
    160 161 162 163 164 165 166 167 168 177 185 187 191
.arrayindex (168)
    on left: 176 177, on right: 129 130
number (169)
    on left: 178 179, on right: 169
integer (170)
    on left: 180, on right: 178
float (171)
    on left: 181, on right: 179
builtin (172)
    on left: 182 183 184 185 186 187 188 189, on right: 174
.spell (173)
    on left: 190 191, on right: 183
spell (174)
    on left: 192, on right: 106 112 173 184 189


state 0

    0 $accept: . file $end

    T_CLASS  shift, and go to state 1

    file    go to state 2
    header  go to state 3


state 1

    5 header: T_CLASS . ':' T_ID $@2 T_BUILD ':' T_ID $@3

    ':'  shift, and go to state 4


state 2

    0 $accept: file . $end

    $end  shift, and go to state 5


state 3

    2 file: header . .optstuff $@1 calledRoutines

    T_EXTERN  shift, and go to state 6
    T_MUTEX   shift, and go to state 7
    T_VAR     shift, and go to state 8

    $default  reduce using rule 36 (.optstuff)

    vardecl    go to state 9
    .optstuff  go to state 10
    optstuff   go to state 11
    optthang   go to state 12


state 4

    5 header: T_CLASS ':' . T_ID $@2 T_BUILD ':' T_ID $@3

    T_ID  shift, and go to state 13


state 5

    0 $accept: file $end .

    $default  accept


state 6

   10 vardecl: T_EXTERN . T_ID $@5 ';'

    T_ID  shift, and go to state 14


state 7

    8 vardecl: T_MUTEX . mutexname $@4 .mutexclip '{' mx_spellist '}' ';'

    T_ID        shift, and go to state 15
    T_MUTEXVAR  shift, and go to state 16

    mutexname  go to state 17


state 8

    6 vardecl: T_VAR . vardecl_line ';'

    T_ID        shift, and go to state 18
    T_VARIABLE  shift, and go to state 19

    vardecl_line  go to state 20
    vardeclent    go to state 21
    varname       go to state 22


state 9

   40 optthang: vardecl .

    $default  reduce using rule 40 (optthang)


state 10

    2 file: header .optstuff . $@1 calledRoutines

    $default  reduce using rule 1 ($@1)

    $@1  go to state 23


state 11

   37 .optstuff: optstuff .
   39 optstuff: optstuff . optthang

    T_EXTERN  shift, and go to state 6
    T_MUTEX   shift, and go to state 7
    T_VAR     shift, and go to state 8

    $default  reduce using rule 37 (.optstuff)

    vardecl   go to state 9
    optthang  go to state 24


state 12

   38 optstuff: optthang .

    $default  reduce using rule 38 (optstuff)


state 13

    5 header: T_CLASS ':' T_ID . $@2 T_BUILD ':' T_ID $@3

    $default  reduce using rule 3 ($@2)

    $@2  go to state 25


state 14

   10 vardecl: T_EXTERN T_ID . $@5 ';'

    $default  reduce using rule 9 ($@5)

    $@5  go to state 26


state 15

   22 mutexname: T_ID .

    $default  reduce using rule 22 (mutexname)


state 16

   23 mutexname: T_MUTEXVAR .

    $default  reduce using rule 23 (mutexname)


state 17

    8 vardecl: T_MUTEX mutexname . $@4 .mutexclip '{' mx_spellist '}' ';'

    $default  reduce using rule 7 ($@4)

    $@4  go to state 27


state 18

   24 varname: T_ID .

    $default  reduce using rule 24 (varname)


state 19

   25 varname: T_VARIABLE .

    $default  reduce using rule 25 (varname)


state 20

    6 vardecl: T_VAR vardecl_line . ';'
   18 vardecl_line: vardecl_line . ',' vardeclent

    ';'  shift, and go to state 28
    ','  shift, and go to state 29


state 21

   17 vardecl_line: vardeclent .

    $default  reduce using rule 17 (vardecl_line)


state 22

   21 vardeclent: varname . $@6 .array $@7 .init

    $default  reduce using rule 19 ($@6)

    $@6  go to state 30


state 23

    2 file: header .optstuff $@1 . calledRoutines

    T_COMBAT       shift, and go to state 31
    T_OUTOFCOMBAT  shift, and go to state 32
    T_PRECOMBAT    shift, and go to state 33
    T_POSTSPELL    shift, and go to state 34
    T_SPELLSENT    shift, and go to state 35
    T_TAKE_DAMAGE  shift, and go to state 36
    T_TAKE_HEAL    shift, and go to state 37
    T_FUNCTION     shift, and go to state 38

    calledRoutines  go to state 39
    calledRoutine   go to state 40
    incombat        go to state 41
    oocombat        go to state 42


state 24

   39 optstuff: optstuff optthang .

    $default  reduce using rule 39 (optstuff)


state 25

    5 header: T_CLASS ':' T_ID $@2 . T_BUILD ':' T_ID $@3

    T_BUILD  shift, and go to state 43


state 26

   10 vardecl: T_EXTERN T_ID $@5 . ';'

    ';'  shift, and go to state 44


state 27

    8 vardecl: T_MUTEX mutexname $@4 . .mutexclip '{' mx_spellist '}' ';'

    '('  shift, and go to state 45

    $default  reduce using rule 11 (.mutexclip)

    .mutexclip  go to state 46


state 28

    6 vardecl: T_VAR vardecl_line ';' .

    $default  reduce using rule 6 (vardecl)


state 29

   18 vardecl_line: vardecl_line ',' . vardeclent

    T_ID        shift, and go to state 18
    T_VARIABLE  shift, and go to state 19

    vardeclent  go to state 47
    varname     go to state 22


state 30

   21 vardeclent: varname $@6 . .array $@7 .init

    '['  shift, and go to state 48

    $default  reduce using rule 26 (.array)

    .array  go to state 49


state 31

   65 incombat: T_COMBAT . .pick_opts $@15 '{' combatstuff '}'

    '('  shift, and go to state 50

    $default  reduce using rule 66 (.pick_opts)

    .pick_opts  go to state 51


state 32

   80 oocombat: T_OUTOFCOMBAT . $@16 .pick_opts '{' combatstuff '}'

    $default  reduce using rule 79 ($@16)

    $@16  go to state 52


state 33

   46 calledRoutine: T_PRECOMBAT . '{' $@8 rotation '}'

    '{'  shift, and go to state 53


state 34

   48 calledRoutine: T_POSTSPELL . '(' parameter ',' parameter ')' '{' $@9 rotation '}'

    '('  shift, and go to state 54


state 35

   54 calledRoutine: T_SPELLSENT . '(' parameter ')' '{' $@12 rotation '}'

    '('  shift, and go to state 55


state 36

   50 calledRoutine: T_TAKE_DAMAGE . '(' parameter ')' '{' $@10 rotation '}'

    '('  shift, and go to state 56


state 37

   52 calledRoutine: T_TAKE_HEAL . '(' parameter ')' '{' $@11 rotation '}'

    '('  shift, and go to state 57


state 38

   57 calledRoutine: T_FUNCTION . T_ID @13 '(' .paramlist ')' '{' @14 rotation '}'

    T_ID  shift, and go to state 58


state 39

    2 file: header .optstuff $@1 calledRoutines .
   42 calledRoutines: calledRoutines . calledRoutine

    T_COMBAT       shift, and go to state 31
    T_OUTOFCOMBAT  shift, and go to state 32
    T_PRECOMBAT    shift, and go to state 33
    T_POSTSPELL    shift, and go to state 34
    T_SPELLSENT    shift, and go to state 35
    T_TAKE_DAMAGE  shift, and go to state 36
    T_TAKE_HEAL    shift, and go to state 37
    T_FUNCTION     shift, and go to state 38

    $default  reduce using rule 2 (file)

    calledRoutine  go to state 59
    incombat       go to state 41
    oocombat       go to state 42


state 40

   41 calledRoutines: calledRoutine .

    $default  reduce using rule 41 (calledRoutines)


state 41

   43 calledRoutine: incombat .

    $default  reduce using rule 43 (calledRoutine)


state 42

   44 calledRoutine: oocombat .

    $default  reduce using rule 44 (calledRoutine)


state 43

    5 header: T_CLASS ':' T_ID $@2 T_BUILD . ':' T_ID $@3

    ':'  shift, and go to state 60


state 44

   10 vardecl: T_EXTERN T_ID $@5 ';' .

    $default  reduce using rule 10 (vardecl)


state 45

   12 .mutexclip: '(' . T_CLIP '=' exp ')'
   13           | '(' . T_CLIP '=' exp ',' exp ')'

    T_CLIP  shift, and go to state 61


state 46

    8 vardecl: T_MUTEX mutexname $@4 .mutexclip . '{' mx_spellist '}' ';'

    '{'  shift, and go to state 62


state 47

   18 vardecl_line: vardecl_line ',' vardeclent .

    $default  reduce using rule 18 (vardecl_line)


state 48

   27 .array: '[' . ']'

    ']'  shift, and go to state 63


state 49

   21 vardeclent: varname $@6 .array . $@7 .init

    $default  reduce using rule 20 ($@7)

    $@7  go to state 64


state 50

   67 .pick_opts: '(' . just_one_opt ')'
   68           | '(' . pick_opts ')'

    T_SPELL           shift, and go to state 65
    T_FREE            shift, and go to state 66
    T_FAIL            shift, and go to state 67
    T_VARIABLE        shift, and go to state 68
    T_EXTERNVARIABLE  shift, and go to state 69

    just_one_opt      go to state 70
    pick_opts         go to state 71
    pick_opt          go to state 72
    failspell         go to state 73
    freespell         go to state 74
    t_variable        go to state 75
    t_externvariable  go to state 76
    variable          go to state 77


state 51

   65 incombat: T_COMBAT .pick_opts . $@15 '{' combatstuff '}'

    $default  reduce using rule 64 ($@15)

    $@15  go to state 78


state 52

   80 oocombat: T_OUTOFCOMBAT $@16 . .pick_opts '{' combatstuff '}'

    '('  shift, and go to state 50

    $default  reduce using rule 66 (.pick_opts)

    .pick_opts  go to state 79


state 53

   46 calledRoutine: T_PRECOMBAT '{' . $@8 rotation '}'

    $default  reduce using rule 45 ($@8)

    $@8  go to state 80


state 54

   48 calledRoutine: T_POSTSPELL '(' . parameter ',' parameter ')' '{' $@9 rotation '}'

    T_FLOAT           shift, and go to state 81
    T_INTEGER         shift, and go to state 82
    T_NIL             shift, and go to state 83
    T_ID              shift, and go to state 84
    T_SPELL           shift, and go to state 85
    T_ABSVAL          shift, and go to state 86
    T_TRUE            shift, and go to state 87
    T_FALSE           shift, and go to state 88
    T_BUILTIN_1       shift, and go to state 89
    T_BUILTIN_2       shift, and go to state 90
    T_BUILTIN_2M      shift, and go to state 91
    T_BUILTIN_3       shift, and go to state 92
    T_BUILTIN_4       shift, and go to state 93
    T_BUILTIN_5       shift, and go to state 94
    T_BUILTIN_MX      shift, and go to state 95
    T_BUILTIN_MX2     shift, and go to state 96
    T_VARIABLE        shift, and go to state 68
    T_EXTERNVARIABLE  shift, and go to state 69
    '-'               shift, and go to state 97
    '!'               shift, and go to state 98
    '('               shift, and go to state 99

    parameter         go to state 100
    t_variable        go to state 75
    t_externvariable  go to state 76
    variable          go to state 101
    exp               go to state 102
    number            go to state 103
    integer           go to state 104
    float             go to state 105
    builtin           go to state 106
    spell             go to state 107


state 55

   54 calledRoutine: T_SPELLSENT '(' . parameter ')' '{' $@12 rotation '}'

    T_FLOAT           shift, and go to state 81
    T_INTEGER         shift, and go to state 82
    T_NIL             shift, and go to state 83
    T_ID              shift, and go to state 84
    T_SPELL           shift, and go to state 85
    T_ABSVAL          shift, and go to state 86
    T_TRUE            shift, and go to state 87
    T_FALSE           shift, and go to state 88
    T_BUILTIN_1       shift, and go to state 89
    T_BUILTIN_2       shift, and go to state 90
    T_BUILTIN_2M      shift, and go to state 91
    T_BUILTIN_3       shift, and go to state 92
    T_BUILTIN_4       shift, and go to state 93
    T_BUILTIN_5       shift, and go to state 94
    T_BUILTIN_MX      shift, and go to state 95
    T_BUILTIN_MX2     shift, and go to state 96
    T_VARIABLE        shift, and go to state 68
    T_EXTERNVARIABLE  shift, and go to state 69
    '-'               shift, and go to state 97
    '!'               shift, and go to state 98
    '('               shift, and go to state 99

    parameter         go to state 108
    t_variable        go to state 75
    t_externvariable  go to state 76
    variable          go to state 101
    exp               go to state 102
    number            go to state 103
    integer           go to state 104
    float             go to state 105
    builtin           go to state 106
    spell             go to state 107


state 56

   50 calledRoutine: T_TAKE_DAMAGE '(' . parameter ')' '{' $@10 rotation '}'

    T_FLOAT           shift, and go to state 81
    T_INTEGER         shift, and go to state 82
    T_NIL             shift, and go to state 83
    T_ID              shift, and go to state 84
    T_SPELL           shift, and go to state 85
    T_ABSVAL          shift, and go to state 86
    T_TRUE            shift, and go to state 87
    T_FALSE           shift, and go to state 88
    T_BUILTIN_1       shift, and go to state 89
    T_BUILTIN_2       shift, and go to state 90
    T_BUILTIN_2M      shift, and go to state 91
    T_BUILTIN_3       shift, and go to state 92
    T_BUILTIN_4       shift, and go to state 93
    T_BUILTIN_5       shift, and go to state 94
    T_BUILTIN_MX      shift, and go to state 95
    T_BUILTIN_MX2     shift, and go to state 96
    T_VARIABLE        shift, and go to state 68
    T_EXTERNVARIABLE  shift, and go to state 69
    '-'               shift, and go to state 97
    '!'               shift, and go to state 98
    '('               shift, and go to state 99

    parameter         go to state 109
    t_variable        go to state 75
    t_externvariable  go to state 76
    variable          go to state 101
    exp               go to state 102
    number            go to state 103
    integer           go to state 104
    float             go to state 105
    builtin           go to state 106
    spell             go to state 107


state 57

   52 calledRoutine: T_TAKE_HEAL '(' . parameter ')' '{' $@11 rotation '}'

    T_FLOAT           shift, and go to state 81
    T_INTEGER         shift, and go to state 82
    T_NIL             shift, and go to state 83
    T_ID              shift, and go to state 84
    T_SPELL           shift, and go to state 85
    T_ABSVAL          shift, and go to state 86
    T_TRUE            shift, and go to state 87
    T_FALSE           shift, and go to state 88
    T_BUILTIN_1       shift, and go to state 89
    T_BUILTIN_2       shift, and go to state 90
    T_BUILTIN_2M      shift, and go to state 91
    T_BUILTIN_3       shift, and go to state 92
    T_BUILTIN_4       shift, and go to state 93
    T_BUILTIN_5       shift, and go to state 94
    T_BUILTIN_MX      shift, and go to state 95
    T_BUILTIN_MX2     shift, and go to state 96
    T_VARIABLE        shift, and go to state 68
    T_EXTERNVARIABLE  shift, and go to state 69
    '-'               shift, and go to state 97
    '!'               shift, and go to state 98
    '('               shift, and go to state 99

    parameter         go to state 110
    t_variable        go to state 75
    t_externvariable  go to state 76
    variable          go to state 101
    exp               go to state 102
    number            go to state 103
    integer           go to state 104
    float             go to state 105
    builtin           go to state 106
    spell             go to state 107


state 58

   57 calledRoutine: T_FUNCTION T_ID . @13 '(' .paramlist ')' '{' @14 rotation '}'

    $default  reduce using rule 55 (@13)

    @13  go to state 111


state 59

   42 calledRoutines: calledRoutines calledRoutine .

    $default  reduce using rule 42 (calledRoutines)


state 60

    5 header: T_CLASS ':' T_ID $@2 T_BUILD ':' . T_ID $@3

    T_ID  shift, and go to state 112


state 61

   12 .mutexclip: '(' T_CLIP . '=' exp ')'
   13           | '(' T_CLIP . '=' exp ',' exp ')'

    '='  shift, and go to state 113


state 62

    8 vardecl: T_MUTEX mutexname $@4 .mutexclip '{' . mx_spellist '}' ';'

    T_SPELL  shift, and go to state 114

    mx_spellist  go to state 115
    mx_spell     go to state 116


state 63

   27 .array: '[' ']' .

    $default  reduce using rule 27 (.array)


state 64

   21 vardeclent: varname $@6 .array $@7 . .init

    '='  shift, and go to state 117

    $default  reduce using rule 28 (.init)

    .init        go to state 118
    single_init  go to state 119
    array_init   go to state 120


state 65

   69 just_one_opt: T_SPELL .

    $default  reduce using rule 69 (just_one_opt)


state 66

   77 freespell: T_FREE . '=' T_SPELL
   78          | T_FREE . '=' variable

    '='  shift, and go to state 121


state 67

   75 failspell: T_FAIL . '=' T_SPELL
   76          | T_FAIL . '=' variable

    '='  shift, and go to state 122


state 68

  127 t_variable: T_VARIABLE .

    $default  reduce using rule 127 (t_variable)


state 69

  128 t_externvariable: T_EXTERNVARIABLE .

    $default  reduce using rule 128 (t_externvariable)


state 70

   67 .pick_opts: '(' just_one_opt . ')'

    ')'  shift, and go to state 123


state 71

   68 .pick_opts: '(' pick_opts . ')'
   72 pick_opts: pick_opts . ',' pick_opt

    ')'  shift, and go to state 124
    ','  shift, and go to state 125


state 72

   71 pick_opts: pick_opt .

    $default  reduce using rule 71 (pick_opts)


state 73

   73 pick_opt: failspell .

    $default  reduce using rule 73 (pick_opt)


state 74

   74 pick_opt: freespell .

    $default  reduce using rule 74 (pick_opt)


state 75

  129 variable: t_variable . .arrayindex

    '['  shift, and go to state 126

    $default  reduce using rule 176 (.arrayindex)

    .arrayindex  go to state 127


state 76

  130 variable: t_externvariable . .arrayindex

    '['  shift, and go to state 126

    $default  reduce using rule 176 (.arrayindex)

    .arrayindex  go to state 128


state 77

   70 just_one_opt: variable .

    $default  reduce using rule 70 (just_one_opt)


state 78

   65 incombat: T_COMBAT .pick_opts $@15 . '{' combatstuff '}'

    '{'  shift, and go to state 129


state 79

   80 oocombat: T_OUTOFCOMBAT $@16 .pick_opts . '{' combatstuff '}'

    '{'  shift, and go to state 130


state 80

   46 calledRoutine: T_PRECOMBAT '{' $@8 . rotation '}'
